force-app/main/default/objects/ampi__Implementation_Plan__c/ampi__Implementation_Plan__c.object-meta.xml
<CustomObject>
    <label>Implementation Plan</label>
    <nameField>
        <label>Implementation Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementation Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>