force-app/main/default/objects/ampi__Implementation_Plan__c/fields/ampi__Active__c.field-meta.xml
<CustomField>
    <fullName>ampi__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>CCheckbox field to control the display of an Implementation Plan record in the picklist on the Implementation Plan Lightning component.</description>
    <inlineHelpText>If this Implementation Plan is active, it will be accessible through the Implementation Plan page so that Activities can be managed for this Implementation Plan.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>