force-app/main/default/objects/ampi__Implementation_Plan__c/fields/ampi__Description__c.field-meta.xml
<CustomField>
    <fullName>ampi__Description__c</fullName>
    <description>This field stores additional details about the Implementation Plan as needed.</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>