force-app/main/default/objects/ampi__Implementation_Plan__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to specify the project this implementation plan is related to</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Implementation Plans</relationshipLabel>
    <relationshipName>Implementation_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>