force-app/main/default/objects/ampi__Implementation_Plan__c/fields/ampi__xx_Locked__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>